<resources>
    <string name="app_name">Автодосие</string>
    <string name="nav_vehicles">Автопарк</string>
    <string name="nav_maintenance">Поддръжка</string>
    <string name="nav_profile">Профил</string>
    <string name="home_title">Вашият автопарк</string>
    <string name="home_empty_title">Все още нямате автомобили</string>
    <string name="home_empty_hint">Докоснете бутона по-долу, за да добавите първия си автомобил</string>
    <string name="fab_add">Добави</string>
    <plurals name="vehicle_count">
        <item quantity="one">%d автомобил</item>
        <item quantity="other">%d автомобила</item>
    </plurals>
    <plurals name="vehicle_count_mixed">
        <item quantity="one">%d превозно средство</item>
        <item quantity="other">%d превозни средства</item>
    </plurals>
    <string name="ov_attention">За внимание</string>
    <string name="ov_all_good">Всичко е наред</string>
    <string name="ov_service_label">Обслужване</string>
    <string name="ov_docs_label">Документи</string>
    <string name="ov_svc_overdue">просрочени: %1$d</string>
    <string name="ov_svc_due">предстоящи: %1$d</string>
    <string name="ov_doc_overdue">изтекли: %1$d</string>
    <string name="ov_doc_due">изтичащи: %1$d</string>
    <plurals name="reminder_overdue">
        <item quantity="one">%d автомобил с просрочено обслужване</item>
        <item quantity="other">%d автомобила с просрочено обслужване</item>
    </plurals>
    <plurals name="reminder_due">
        <item quantity="one">%d автомобил с предстоящо обслужване</item>
        <item quantity="other">%d автомобила с предстоящо обслужване</item>
    </plurals>
    <plurals name="reminder_doc_overdue">
        <item quantity="one">%d автомобил с изтекли документи</item>
        <item quantity="other">%d автомобила с изтекли документи</item>
    </plurals>
    <plurals name="reminder_doc_due">
        <item quantity="one">%d автомобил с изтичащи документи</item>
        <item quantity="other">%d автомобила с изтичащи документи</item>
    </plurals>
    <string name="vehicle_details">Детайли за автомобила</string>
    <string name="back">Назад</string>
    <string name="spec_year">Година</string>
    <string name="spec_plate">Регистрационен номер</string>
    <string name="spec_mileage">Пробег</string>
    <string name="vt_car">Лек автомобил</string>
    <string name="vt_motorcycle">Мотоциклет</string>
    <string name="vt_van">Бус</string>
    <string name="vt_truck">Камион</string>
    <string name="vt_group_car">Автомобили</string>
    <string name="vt_group_motorcycle">Мотоциклети</string>
    <string name="vt_group_van">Бусове</string>
    <string name="vt_group_truck">Камиони</string>
    <string name="spec_type">Тип</string>
    <string name="cmp_st_exempt">Не се изисква</string>
    <string name="cmp_vignette_exempt">Не се изисква винетка</string>
    <string name="cmp_vignette_exempt_hint">Мотоциклетите са освободени от такса за ползване на републиканската пътна мрежа.</string>
    <string name="spec_fuel">Гориво</string>
    <string name="spec_vin">VIN</string>
    <string name="spec_color">Цвят</string>
    <string name="history_title">История на поддръжката</string>
    <string name="no_records">Все още няма записи.</string>
    <string name="last_change">Последна смяна</string>
    <string name="next_change">Следваща смяна</string>
    <string name="st_ok">Наред</string>
    <string name="st_due">Предстои</string>
    <string name="st_overdue">Просрочено</string>
    <string name="km_remaining">Оставащи %s</string>
    <string name="km_overdue">Просрочено с %s</string>
    <string name="record_cost">Цена: %s</string>
    <string name="record_notes_cd">Виж бележките</string>
    <string name="record_notes_title">Бележки</string>
    <string name="action_close">Затвори</string>
    <string name="currency_suffix">€</string>
    <string name="maint_title">Поддръжка</string>
    <string name="maint_add">Добави</string>
    <string name="maint_no_vehicles">Първо добавете автомобил от таб „Автопарк“.</string>
    <string name="am_title">Ново обслужване</string>
    <string name="am_vehicle">Автомобил</string>
    <string name="am_type">Вид обслужване</string>
    <string name="am_mileage">Пробег (км)</string>
    <string name="am_date">Дата (по избор)</string>
    <string name="am_cost">Цена (по избор)</string>
    <string name="am_cost_helper">Платената сума за обслужването</string>
    <string name="am_invalid_cost">Въведете валидна цена.</string>
    <string name="am_notes">Бележки (по избор)</string>
    <string name="am_save">Запази</string>
    <string name="am_saved">Записът е добавен</string>
    <string name="am_error">Грешка при запис. Опитайте отново.</string>
    <string name="am_invalid_mileage">Въведете валиден пробег.</string>
    <string name="am_intro">Изберете автомобил и вид обслужване, след което въведете пробега при извършването.</string>
    <string name="am_section_vehicle">Автомобил</string>
    <string name="am_section_service">Обслужване</string>
    <string name="am_section_details">Допълнително</string>
    <string name="am_pick_date">Изберете дата</string>
    <string name="am_mileage_helper">Пробегът на автомобила към момента на обслужването</string>
    <string name="maint_types_title">Видове обслужване и интервали</string>
    <string name="maint_interval">На всеки %s</string>
    <string name="maint_interval_unknown">По препоръка на производителя</string>
    <string name="maint_interval_label">Интервал за смяна</string>
    <string name="maint_warning_title">Внимание</string>
    <string name="maint_info_cd">Повече информация</string>
    <string name="pdf_title">Сервизна история</string>
    <string name="pdf_exported">Издадена на</string>
    <string name="pdf_section_summary">Последно обслужване по видове</string>
    <string name="pdf_section_history">Пълна история</string>
    <string name="pdf_col_date">Дата</string>
    <string name="pdf_col_service">Обслужване</string>
    <string name="pdf_col_mileage">Пробег</string>
    <string name="pdf_col_next">Следващо</string>
    <string name="pdf_no_records">Няма записани обслужвания.</string>
    <string name="pdf_page">Стр. %d</string>
    <string name="pdf_export_cd">Експортирай историята</string>
    <string name="pdf_exporting">Подготвяне на PDF…</string>
    <string name="pdf_share_title">Сервизна история</string>
    <string name="pdf_error">Неуспешно създаване на PDF. Опитайте отново.</string>
    <string name="pdf_no_app">Няма приложение за отваряне на PDF.</string>
    <string name="pdf_action_save">Запази в устройството</string>
    <string name="pdf_action_share">Сподели</string>
    <string name="pdf_saved">Файлът е запазен</string>
    <string name="pdf_save_error">Неуспешно запазване на файла.</string>
    <string name="pdf_open">Отвори</string>
    <string name="share_title">Линк към историята</string>
    <string name="share_intro">Купувачът сканира кода и вижда сервизната история в браузър — без да инсталира приложението. Линкът може да бъде спрян по всяко време.</string>
    <string name="share_qr_cd">QR код с линк към сервизната история</string>
    <string name="share_expires">Валиден до %s</string>
    <string name="share_no_expiry">Без срок на валидност</string>
    <string name="share_copy">Копирай</string>
    <string name="share_send">Изпрати</string>
    <string name="share_copied">Линкът е копиран</string>
    <string name="share_revoke">Спри линка</string>
    <string name="share_revoke_title">Спиране на линка</string>
    <string name="share_revoke_message">Линкът ще спре да работи за всички, на които вече сте го изпратили. Сигурни ли сте?</string>
    <string name="share_revoked">Линкът е спрян</string>
    <string name="share_revoke_error">Линкът не беше спрян. Опитайте отново.</string>
    <string name="share_error">Линкът не можа да бъде създаден. Опитайте отново.</string>
    <string name="pdf_action_link">Линк с QR код</string>
    <string name="bio_setting_title">Заключване с биометрия</string>
    <string name="bio_setting_summary">Изисквай пръстов отпечатък при отваряне</string>
    <string name="bio_setting_unavailable">Няма регистрирана биометрия на устройството</string>
    <string name="bio_prompt_title">Отключване</string>
    <string name="bio_prompt_subtitle">Потвърдете самоличността си, за да продължите</string>
    <string name="bio_use_password">Вход с парола</string>
    <string name="bio_unlock">Отключи с биометрия</string>
    <string name="bio_unavailable">Биометрията не е достъпна. Влезте с потребител и парола.</string>
    <string name="bio_enabled">Заключването е включено</string>
    <string name="bio_disabled">Заключването е изключено</string>
    <string name="notif_setting_title">Известия</string>
    <string name="notif_setting_summary">Напомняния за обслужване и документи</string>
    <string name="notif_setting_blocked">Известията са спрени от настройките на телефона</string>
    <string name="notif_enabled">Известията са включени</string>
    <string name="notif_disabled">Известията са изключени</string>
    <string name="notif_permission_denied">Разрешете известията от настройките на телефона</string>
    <string name="notif_open_settings">Настройки</string>
    <string name="rem_channel_name">Напомняния за обслужване</string>
    <string name="rem_channel_desc">Известия за предстоящо и просрочено обслужване на автомобилите ви.</string>
    <plurals name="rem_overdue_title">
        <item quantity="one">Просрочено обслужване</item>
        <item quantity="other">Просрочено обслужване при %d автомобила</item>
    </plurals>
    <plurals name="rem_due_title">
        <item quantity="one">Предстоящо обслужване</item>
        <item quantity="other">Предстоящо обслужване при %d автомобила</item>
    </plurals>
    <string name="rem_doc_channel_name">Напомняния за документи</string>
    <string name="rem_doc_channel_desc">Известия за изтичаща винетка, ГТП и Гражданска отговорност.</string>
    <plurals name="rem_doc_overdue_title">
        <item quantity="one">Изтекли документи</item>
        <item quantity="other">Изтекли документи при %d автомобила</item>
    </plurals>
    <plurals name="rem_doc_due_title">
        <item quantity="one">Изтичащи документи</item>
        <item quantity="other">Изтичащи документи при %d автомобила</item>
    </plurals>
    <string name="av_title">Нов автомобил</string>
    <string name="av_intro">Попълнете данните за автомобила. Полетата в „Основни данни“ са задължителни.</string>
    <string name="av_photo_section">Снимка</string>
    <string name="av_section_main">Основни данни</string>
    <string name="av_section_extra">Допълнителни данни</string>
    <string name="av_eg_make">напр. BMW</string>
    <string name="av_eg_model">напр. 320d</string>
    <string name="av_eg_year">напр. 2018</string>
    <string name="av_eg_plate">напр. CA1234AB</string>
    <string name="av_km">км</string>
    <string name="av_mileage_helper">Текущ пробег на автомобила</string>
    <string name="av_optional">По избор</string>
    <string name="av_photo_mode_default">Стандартна</string>
    <string name="edit_vehicle">Редактиране</string>
    <string name="ev_make">Марка</string>
    <string name="ev_model">Модел</string>
    <string name="ev_year">Година</string>
    <string name="ev_plate">Регистрационен номер</string>
    <string name="ev_mileage">Пробег (км)</string>
    <string name="ev_type">Тип превозно средство</string>
    <string name="ev_fuel">Гориво</string>
    <string name="ev_vin">VIN</string>
    <string name="ev_color">Цвят</string>
    <string name="ev_save">Запази</string>
    <string name="am_section_document">Документ</string>
    <string name="am_doc_intro">Прикачете снимка на касовия бон, фактурата или протокола. По избор.</string>
    <string name="am_doc_attach">Прикачи снимка</string>
    <string name="am_doc_remove">Премахни</string>
    <string name="am_doc_preview_cd">Прикачена снимка на документ</string>
</resources>